apps/shop/frontend/k8s/base/authzpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-frontend
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - asm-gateways
              - shop-loadgenerator
